[tool.poetry]
name = "carta"
version = "0.1.2"
description = "Python library for making GUI applications on the ReMarkable tablet wrapped around the \"simple\" application"
authors = ["JaySec"]
license = "gpl-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
